add lessons to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
 # Project exclude paths
 /out/
+/src/academy/cata/
+/src/game/
+/src/lesson1/
+/src/lesson2/
+/src/lesson3/
+/src/lesson4/
+/src/lesson5/
+/src/lesson6/
+/src/lesson7/
+/src/lesson8/
+/src/lesson9/
+/src/lesson11/
+/src/tours/
+/src/lesson10.zip
